--- a/final-report/impl.tex
+++ b/final-report/impl.tex
@@ -2,19 +2,16 @@
 \label{sec:impl}
 
 %%% \subsection{WebOS vs Android}
-%%% \Comment{ADD MORE HERE}
 %%% \subsubsection{libc vs bionic}
 %%% Despite the fact the Pre and the Android are both running Linux OSes on an ARM chip, the environments they provide for our project are enormously different.  The Pre is bundled with a large suite of common Unix applications and libraries, while the Android diverges, running minimalistic libraries and lacking many common libraries and applications.  Of these differences, the C compiler library is probably the most substantial. The Pre uses an unmodified version of glibc and the Android uses Bionic, a lightweight and small C compiler library.  Many Linux applications have glibc as a dependency, and as a result, builds for the Android must have statically link libraries.  Between this and the lack of useful applications (gdb and other debugging tools) development on the Android has proven much more difficult.  \\
 %%% 
 \subsection{LXC and module compatibility}
 
-\Comment{CLEANUP}
-While experimenting with new kernels on our WebOS devices, we encountered an issue that took some work to get around.  Like many mobile devices the Palm Pre ships with a number of binary modules for which the source is unavailable.  For example, the wifi drivers ``sd8xxx.ko'' and ``uap8xxx.ko'' ship with the device, but are not open-source and so all we have is the final binary module.  This is not uncommon for linux drivers, but presents us with two issues, both having to do with maintaining the ABI. \\
+While experimenting with new kernels on WebOS devices, we encountered some issues that required work arounds.  Like many mobile devices the Palm Pre ships with a number of binary modules for which the source code is unavailable.  For example, the wifi drivers ``sd8xxx.ko'' and ``uap8xxx.ko'' that ship with the device, but are not open-source and so we only have access to the final binary module.  This is not uncommon for linux drivers, but presents us with two issues, both having to do with maintaining the ABI. \\
 
-    The first issue is simpler, regarding the 'MODVERSIONS' config option in the kernel \cite{modversions}.  This config option serves the purpose of help identify symbols by their contents and functionality by appending a CRC of related information to the symbol name.  This was an issue because our changes modified slightly (if not functionally) the definitions of some code, and resulted in mismatched version info.  Our solution was to build the kernel without support for this, but the result is less safe checking of loaded modules.  Note that this is not a security concern since loading modules is a privileged operation anyway, but rather is undesirable to help prevent the careless user from loading modules they should not. \\
+    The first issue is simpler, regarding the 'MODVERSIONS' config option in the kernel \cite{modversions}.  This config option helps identify symbols by their contents and functionality and appends a CRC of related information to the symbol name.  This was an issue because our changes slightly modified the definitions of some symbols, and this resulted in mismatched version information.  Our solution was to build the kernel without support for this, but this results in lesser safety guarantees when loading kernel modules.  Note that this is not a security concern since loading modules is a privileged operation anyway, but rather is undesirable as the safety checks help prevent the user from loading incompatible modules. \\
 
-    The second issue is similar but presented more of a challenge was what this locking to a particular ABI meant regarding the kinds of changes we could make.  The Pre ships with a modified version of linux 2.6.24 \cite{pre_kernel}, but full support for LXC was not merged into the linux mainline until 2.6.26 \cite{lxc_kernel}.  In 2.6.24 there is partial LXC support, and we had to backport some of the other pieces.  However we were unable to get full LXC support since some features (such as network namespaces) are rely on significant changes in the kernel architecture.  However, this is not a fault in our design and a device manufacturer most likely would not be faced with this issue, being in the position to acquire or build the related modules for the kernel version they desired. \\
-
+    The second issue that was similar, but presented a greater challenge was that the ABI of our modified kernel needed to match that of the stock kernel. This restricted the kind of changes we could make in the kernel.  The Palm Pre ships with a modified version of linux 2.6.24 \cite{pre_kernel}, but full support for LXC was not merged into the linux mainline until 2.6.26 \cite{lxc_kernel}.  In 2.6.24 there is partial LXC support, and we had to backport some of the other pieces.  However we were unable to get full LXC support since some features (such as network namespaces) are rely on significant changes in the kernel architecture.  However, this is not a fault in our design and a device manufacturer most likely would not be faced with this issue, being in the position to acquire or build the related modules for the kernel version they desired. \\
 
 \subsection{X-Server}
 
