--- a/final-report/overview.tex
+++ b/final-report/overview.tex
@@ -2,12 +2,9 @@
 \label{sec:overview}
 Our architecture has two main components: the virtualization framework, and the integration front-end.  The virtualization framework contains a container-ready kernel as well as each of the spawned containers (see Figure \ref{fig:arch}).  A container could contain one or more applications.  Initially we intended to explore both x86-based Operating Systems as well as ARM based systems.  However, initial results show that x86-based Operating Systems will be far too slow.  Although an x86-based OS would have enabled a more diverse set of target applications, ARM-based systems have less virtualization overhead and some options may not be prohibitively slow.
 
-
 The other component is the integration front-end. This contains a light X-server that has been integrated into the host OS, and also contains the container controller. The controller runs inside the host OS. The controller will be the user interface that controls launching, switching, suspending, resuming, migrating the containers, as well as ensuring the X-server is running properly. \\
-
 A shared X-server removes rendering overhead from each container and reduces the complexity in composing the UI. We choose to share the rendering state between third-party applications for performance reasons and simplicity of design, but ensure isolation from native applications. Additionally the X-server runs native code, which allows for it to be less CPU intensive than running inside a container. \\
 
 We aim to make the virtualization framework device independent, which is important because we anticipate this to be the more complex component. The integration front-end will have to be ported for each new device we support, but we will strive to make its implementation simple. Our first implementation focuses on one particular device and OS and support  migration of applications from desktops. \\
 
-In summary, we leverage the existing linux containers architecture to build a secure, usable and portable framework for mobile device virtualization. Our contributions are focused on providing the ability for secure execution of applications while also providing deep integration to the mobile device. Our proposed security model is an effective method to isolate applications and we find that our design ideas are similar to other recent efforts \cite{grier2008secure} in isolating untrusted code. \\
-
+In summary, we leverage the existing linux containers architecture to build a secure, usable and portable framework for mobile device virtualization. Our contributions are focused on providing the ability for secure execution of applications while also providing deep integration to the mobile device. Our proposed security model is an effective method to isolate applications and we find that our design ideas are similar to other recent efforts \cite{grier2008secure} in isolating untrusted code. 
